--- a/index.html
+++ b/index.html
@@ -170,13 +170,33 @@
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#combine-strings"><i class="fa fa-check"></i>Combine strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#splitting-strings"><i class="fa fa-check"></i>Splitting strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#subsetting-strings"><i class="fa fa-check"></i>Subsetting strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#locating-a-pattern-in-a-string"><i class="fa fa-check"></i>Locating a pattern in a string</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#testing-strings"><i class="fa fa-check"></i>Testing strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#regular-expressions-regex"><i class="fa fa-check"></i>Regular expressions (regex)</a></li>
-<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#dealing-with-special-characters"><i class="fa fa-check"></i>Dealing with special characters</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#dealing-with-special-characters-in-strings"><i class="fa fa-check"></i>Dealing with special characters in strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#summary"><i class="fa fa-check"></i>Summary</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#homework-3"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html"><i class="fa fa-check"></i>Chapter 5 - Describing and visualizing data</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html"><i class="fa fa-check"></i>Chapter 5 - Describing and visualizing data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#learning-objectives-4"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#exploring-with-numbers"><i class="fa fa-check"></i>Exploring with numbers</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#measures-of-central-tendency"><i class="fa fa-check"></i>Measures of central tendency</a></li>
+<li><a href="chapter-5---describing-and-visualizing-data.html#measures-of-dispersion"><strong>Measures of dispersion</strong></a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#contingency-tables"><i class="fa fa-check"></i>Contingency tables</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#reporting-descriptive-statistics"><i class="fa fa-check"></i>Reporting descriptive statistics</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#making-beautiful-tables"><i class="fa fa-check"></i>Making beautiful tables</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#exploring-with-visualizations"><i class="fa fa-check"></i>Exploring with visualizations</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#the-ggplot-syntax"><i class="fa fa-check"></i>the ggplot syntax</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#choosing-the-right-visualization-for-your-data"><i class="fa fa-check"></i>Choosing the right visualization for your data</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#facets"><i class="fa fa-check"></i>Facets</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html#making-pretty-figures"><i class="fa fa-check"></i>Making pretty figures</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-6---network-analysis.html"><a href="chapter-6---network-analysis.html"><i class="fa fa-check"></i>Chapter 6 - Network analysis</a></li>
 <li class="chapter" data-level="" data-path="chapter-7---topic-modelling.html"><a href="chapter-7---topic-modelling.html"><i class="fa fa-check"></i>Chapter 7 - Topic modelling</a></li>
 <li class="chapter" data-level="" data-path="chapter-8---k-nearest-neighbors.html"><a href="chapter-8---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 8 - K nearest neighbors</a></li>
@@ -213,8 +233,8 @@
 <h2>Schedule</h2>
 <p>The class time will be divided as follows:</p>
 <ul>
-<li><p><strong>8:35 am to 9:25 am</strong>: lecture &amp; Q&amp;A in-person and on <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> (<strong>only on teams for January</strong>).</p></li>
-<li><p><strong>9:35 am to 11:25 am</strong>: Lab time with in-person and <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> support (<strong>only teams support for January</strong>)</p></li>
+<li><p><strong>8:35 am to 9:25 am</strong>: lecture &amp; Q&amp;A in-person and on <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a>.</p></li>
+<li><p><strong>9:35 am to 11:25 am</strong>: Lab time with in-person and <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> support.</p></li>
 </ul>
 <p><strong>In-person attendance will remain optional for the entire semester</strong>. When in-person teaching resumes, the lectures will be hybrid (in-person, with a recorded Teams broadcast). The labs will be in person, with virtual support available via Teams. Of course, I am always available for support outside of class hours and you can book a meeting with me <a href="https://calendly.com/pmongeon/">here</a>.</p>
 <table class=" lightable-classic" style="font-family: &quot;Arial Narrow&quot;, &quot;Source Sans Pro&quot;, sans-serif; margin-left: auto; margin-right: auto;">
