--- a/404.html
+++ b/404.html
@@ -170,19 +170,72 @@
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#combine-strings"><i class="fa fa-check"></i>Combine strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#splitting-strings"><i class="fa fa-check"></i>Splitting strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#subsetting-strings"><i class="fa fa-check"></i>Subsetting strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#locating-a-pattern-in-a-string"><i class="fa fa-check"></i>Locating a pattern in a string</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#testing-strings"><i class="fa fa-check"></i>Testing strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#regular-expressions-regex"><i class="fa fa-check"></i>Regular expressions (regex)</a></li>
-<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#dealing-with-special-characters"><i class="fa fa-check"></i>Dealing with special characters</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#dealing-with-special-characters-in-strings"><i class="fa fa-check"></i>Dealing with special characters in strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#summary"><i class="fa fa-check"></i>Summary</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#homework-3"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html"><i class="fa fa-check"></i>Chapter 5 - Describing and visualizing data</a></li>
-<li class="chapter" data-level="" data-path="chapter-6---network-analysis.html"><a href="chapter-6---network-analysis.html"><i class="fa fa-check"></i>Chapter 6 - Network analysis</a></li>
-<li class="chapter" data-level="" data-path="chapter-7---topic-modelling.html"><a href="chapter-7---topic-modelling.html"><i class="fa fa-check"></i>Chapter 7 - Topic modelling</a></li>
-<li class="chapter" data-level="" data-path="chapter-8---k-nearest-neighbors.html"><a href="chapter-8---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 8 - K nearest neighbors</a></li>
-<li class="chapter" data-level="" data-path="chapter-9---logistic-regression.html"><a href="chapter-9---logistic-regression.html"><i class="fa fa-check"></i>Chapter 9 - Logistic regression</a></li>
-<li class="chapter" data-level="" data-path="chapter-10---linear-regression.html"><a href="chapter-10---linear-regression.html"><i class="fa fa-check"></i>Chapter 10 - Linear regression</a></li>
-<li class="chapter" data-level="" data-path="chapter-11---principal-component-analysis.html"><a href="chapter-11---principal-component-analysis.html"><i class="fa fa-check"></i>Chapter 11 - Principal component analysis</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html"><i class="fa fa-check"></i>Chapter 5 - R Markdown</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#learning-objectives-4"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#introduction"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#r-markdown"><i class="fa fa-check"></i>R Markdown</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#creating-a-r-markdown-file-in-rstudio"><i class="fa fa-check"></i>Creating a R Markdown file in RStudio</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#three-components-of-a-r-markdown-file"><i class="fa fa-check"></i>Three components of a R Markdown file</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#visual-mode"><i class="fa fa-check"></i>Visual mode</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#rendering-knitting-your-document"><i class="fa fa-check"></i>Rendering (knitting) your document</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#making-beautiful-tables-with-r-markdown"><i class="fa fa-check"></i>Making beautiful tables with R Markdown</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#the-kableextra-package"><i class="fa fa-check"></i>the kableExtra package</a></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#keeping-it-simple"><i class="fa fa-check"></i>keeping it simple</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-5---r-markdown.html"><a href="chapter-5---r-markdown.html#summary-1"><i class="fa fa-check"></i>Summary</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html"><i class="fa fa-check"></i>Chapter 6 - Summarizing data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#learning-objectives-5"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#introduction-1"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#types-of-variables"><i class="fa fa-check"></i>Types of variables</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#categorical"><i class="fa fa-check"></i>Categorical</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#numerical-variables"><i class="fa fa-check"></i>Numerical variables</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#categories-represented-with-numbers"><i class="fa fa-check"></i>Categories represented with numbers</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#summarizing-categorical-data"><i class="fa fa-check"></i>Summarizing categorical data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#frequency"><i class="fa fa-check"></i>Frequency</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#relative-frequency"><i class="fa fa-check"></i>Relative frequency</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#adding-a-total"><i class="fa fa-check"></i>Adding a total</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#summarizing-numerical-data"><i class="fa fa-check"></i>Summarizing numerical data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#measures-of-centrality"><i class="fa fa-check"></i>Measures of centrality</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#measures-of-dispersion"><i class="fa fa-check"></i>Measures of dispersion</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#measures-of-symmetry"><i class="fa fa-check"></i>Measures of symmetry</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#creating-a-descriptive-statistics-summary"><i class="fa fa-check"></i>Creating a descriptive statistics summary</a></li>
+<li class="chapter" data-level="" data-path="chapter-6---summarizing-data.html"><a href="chapter-6---summarizing-data.html#homework-4"><i class="fa fa-check"></i>Homework</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html"><i class="fa fa-check"></i>Chapter 7 - Visualizing data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#introduction-2"><i class="fa fa-check"></i>Introduction</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#the-ggplot-syntax"><i class="fa fa-check"></i>the ggplot syntax</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#choosing-the-right-visualization-for-your-data"><i class="fa fa-check"></i>Choosing the right visualization for your data</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#facets"><i class="fa fa-check"></i>Facets</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#making-pretty-figures"><i class="fa fa-check"></i>Making pretty figures</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a></li>
+<li class="chapter" data-level="" data-path="chapter-9---k-nearest-neighbors.html"><a href="chapter-9---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 9 - K nearest neighbors</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html"><i class="fa fa-check"></i>Chapter 10 - Logistic regression</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html"><i class="fa fa-check"></i>Chapter 11 - Linear regression</a></li>
+<li class="chapter" data-level="" data-path="chapter-12---principal-component-analysis.html"><a href="chapter-12---principal-component-analysis.html"><i class="fa fa-check"></i>Chapter 12 - Principal component analysis</a></li>
 <li class="chapter" data-level="" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i>Conclusion</a></li>
 </ul>
 
