--- a/404.html
+++ b/404.html
@@ -123,28 +123,6 @@ code span.vs { color: #4070a0; } /* VerbatimString */
 code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
 </style>
 
-<style type="text/css">
-/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-}
-.hanging div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}
-</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -335,7 +313,36 @@ div.csl-indent {
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#homework-5"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a></li>
+<li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a>
+<ul>
+<li class="chapter" data-level="0.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#learning-objectives-6"><i class="fa fa-check"></i><b>0.1</b> Learning objectives</a></li>
+<li class="chapter" data-level="0.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#introduction-3"><i class="fa fa-check"></i><b>0.2</b> Introduction</a></li>
+<li class="chapter" data-level="0.3" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#the-dataset"><i class="fa fa-check"></i><b>0.3</b> The dataset</a></li>
+<li class="chapter" data-level="0.4" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#data-formats-for-text-mining"><i class="fa fa-check"></i><b>0.4</b> Data formats for text-mining</a>
+<ul>
+<li class="chapter" data-level="0.4.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tidy-text"><i class="fa fa-check"></i><b>0.4.1</b> Tidy text</a></li>
+<li class="chapter" data-level="0.4.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#document-term-matrix"><i class="fa fa-check"></i><b>0.4.2</b> Document-term matrix</a></li>
+</ul></li>
+<li class="chapter" data-level="0.5" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tokenizing"><i class="fa fa-check"></i><b>0.5</b> Tokenizing</a>
+<ul>
+<li class="chapter" data-level="0.5.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#words"><i class="fa fa-check"></i><b>0.5.1</b> Words</a></li>
+<li class="chapter" data-level="0.5.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentences"><i class="fa fa-check"></i><b>0.5.2</b> Sentences</a></li>
+<li class="chapter" data-level="0.5.3" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#n-grams"><i class="fa fa-check"></i><b>0.5.3</b> N-grams</a></li>
+</ul></li>
+<li class="chapter" data-level="0.6" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#removing-stop-words"><i class="fa fa-check"></i><b>0.6</b> Removing stop words</a></li>
+<li class="chapter" data-level="0.7" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#stemming-and-lemmatization"><i class="fa fa-check"></i><b>0.7</b> Stemming and lemmatization</a></li>
+<li class="chapter" data-level="0.8" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency"><i class="fa fa-check"></i><b>0.8</b> Term frequency</a>
+<ul>
+<li class="chapter" data-level="0.8.1" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#overall-term-frequency"><i class="fa fa-check"></i><b>0.8.1</b> Overall term frequency</a></li>
+<li class="chapter" data-level="0.8.2" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-journal"><i class="fa fa-check"></i><b>0.8.2</b> Term frequency by journal</a></li>
+<li class="chapter" data-level="0.8.3" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#term-frequency-by-document"><i class="fa fa-check"></i><b>0.8.3</b> Term frequency by document</a></li>
+<li class="chapter" data-level="0.8.4" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#word-clouds"><i class="fa fa-check"></i><b>0.8.4</b> Word clouds</a></li>
+<li class="chapter" data-level="0.8.5" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#tf-idf"><i class="fa fa-check"></i><b>0.8.5</b> TF-IDF</a></li>
+</ul></li>
+<li class="chapter" data-level="0.9" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#sentiment-analysis"><i class="fa fa-check"></i><b>0.9</b> Sentiment analysis</a></li>
+<li class="chapter" data-level="0.10" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#topic-modelling"><i class="fa fa-check"></i><b>0.10</b> Topic modelling</a></li>
+<li class="chapter" data-level="0.11" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#other-resources"><i class="fa fa-check"></i><b>0.11</b> Other resources</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-9---k-nearest-neighbors.html"><a href="chapter-9---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 9 - K nearest neighbors</a></li>
 <li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html"><i class="fa fa-check"></i>Chapter 10 - Logistic regression</a></li>
 <li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html"><i class="fa fa-check"></i>Chapter 11 - Linear regression</a></li>
